# fitness-tracker

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_STYLE.md  Cargo.toml  README.md  compose.dev.yaml  compose.yaml
.github/workflows/: deploy-dev.yml  deploy.yml
crates/application/: Cargo.toml
crates/application/src/: error.rs  lib.rs
crates/application/src/gym/: mod.rs
crates/application/src/health/: mod.rs
crates/application/src/preferences/: mod.rs
crates/domain/: Cargo.toml
crates/domain/src/: ai.rs  lib.rs  sql.rs  traits.rs  types.rs
crates/domain/src/excercise/: catalog.rs  excercise.rs  mod.rs  muscle_group.rs  query.rs  repetitions.rs  workout.rs
crates/domain/src/generation/: mod.rs  traits.rs  types.rs
crates/domain/src/health/: mod.rs
crates/domain/src/preferences/: mod.rs
crates/domain/src/types/: excercise.rs  mod.rs  muscle_group.rs  query.rs  repetitions.rs  units.rs  workout.rs
crates/fitness-tracker-proto/: Cargo.toml  build.rs
crates/fitness-tracker-proto/proto/fitness_tracker/: common.proto  health_data.proto  workout_data.proto  workout_generator.proto
crates/fitness-tracker-proto/src/: lib.rs
crates/infra/: Cargo.toml
crates/infra/migrations/: 20260417120000_initial_schema.sql
crates/infra/src/: excercies.rs  lib.rs  workouts.rs
crates/infra/src/ai/: dto.rs  format.rs  mod.rs  tool.rs  workout-programmer.md
crates/infra/src/ai/tools/: constants.rs  exercise_data.rs  generator.rs  mod.rs  prompt.rs  resolve.rs  schema.rs  tools.rs  workout-programmer.md
crates/infra/src/bot/: handlers.rs  mod.rs
crates/infra/src/generation/: dispatcher.rs  event_bus.rs  mod.rs
crates/infra/src/grpc/: health_data_service.rs  mod.rs  workout_data_service.rs
crates/infra/src/repos/: excercies.rs  generation_jobs.rs  health.rs  mod.rs  postgres.rs  postgres_types.rs  preferences.rs  workouts.rs
crates/infra/src/web/: excercise.rs  internal.rs  mod.rs  preferences.rs  profile.rs  telegram_auth.rs  types.rs  workout.rs  workout_generation_jobs.rs
deploy/: Dockerfile  compose.yaml
services/workout-generator-py/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/workout-generator-py/app/: __init__.py  dependencies.py  main.py
services/workout-generator-py/app/api/: error_handlers.py
services/workout-generator-py/app/api/routers/: health.py  workouts.py
services/workout-generator-py/app/api/schemas/: errors.py  workout_generation.py
services/workout-generator-py/app/application/: errors.py
services/workout-generator-py/app/application/ports/: ai_client.py  tool_data_provider.py
services/workout-generator-py/app/application/services/: tool_dispatcher.py  workout_generation_service.py
services/workout-generator-py/app/domain/: constants.py  models.py  prompt_builder.py  resolver.py  response_schema.py  system_prompt.py  tool_specs.py
services/workout-generator-py/app/infrastructure/: config.py  logging.py
services/workout-generator-py/app/infrastructure/ai/: openai_chat_client.py  serializers.py
services/workout-generator-py/app/infrastructure/grpc/: __init__.py  workout_generator_service.py
services/workout-generator-py/app/infrastructure/providers/: grpc_tool_data_provider.py
services/workout-generator-py/app/infrastructure/tooling/: __init__.py  registry.py
services/workout-generator-py/tests/integration/: test_workout_generation_service.py
services/workout-generator-py/tests/unit/: test_response_resolution.py  test_tool_dispatcher.py  test_validation.py
src/: lib.rs  main.rs
web/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
web/src/: App.tsx  api.ts  index.css  main.tsx  store.ts  telegram.ts  types.ts  utils.ts  vite-env.d.ts
web/src/components/: CalendarStrip.tsx  ExerciseLibrary.tsx  ExercisePicker.tsx  GenerateWorkoutModal.tsx  Modal.tsx  PersonalView.tsx  WorkoutView.tsx
