[package]
name = "fitness-tracker"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/application", "crates/domain", "crates/infra"]

[workspace.dependencies]
time = "0.3.47"
domain = { path = "crates/domain" }

[dependencies]
application = { path = "crates/application" }
domain = { workspace = true }
infra = { path = "crates/infra" }
time = { workspace = true }

anyhow = "1"
axum = { version = "0.8.8", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }

crossterm = "0.29.0"
ratatui = "0.30.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
