[package]
name = "fitness-tracker"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[workspace]
members = [
    "crates/application",
    "crates/domain",
    "crates/infra",
    "crates/fitness-tracker-proto",
]

[workspace.dependencies]
time = "0.3.47"
domain = { path = "crates/domain" }
tracing = "0.1"
async-trait = "0.1.89"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"

[dependencies]
application = { path = "crates/application" }
domain = { workspace = true }
infra = { path = "crates/infra" }
time = { workspace = true }

anyhow = "1"
axum = { version = "0.8.8", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
