[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[features]
rusqlite = ["dep:rusqlite"]

[dependencies]
rusqlite = { version = "0.39.0", optional = true }
strum = { version = "0.28.0", features = ["derive"] }
time = { workspace = true }
uuid = { version = "1.22.0", features = ["serde", "v4"] }
