[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.28.0", features = ["derive"] }
time = { workspace = true }
uuid = { version = "1.22.0", features = ["serde", "v4"] }
async-trait = { workspace = true }
anyhow = "1"
