[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
time = { workspace = true, features = ["serde", "serde-well-known"] }

application = { path = "../application" }

postgres = { version = "0.19", features = ["with-time-0_3", "with-uuid-1"] }
postgres-types = { version = "0.2", features = ["derive"] }
thiserror = "2.0.18"
uuid = { version = "1.22.0", features = ["v4"] }
axum = { version = "0.8.8", features = ["json"] }
serde = { version = "1", features = ["derive"] }
teloxide = { version = "0.17.0", features = ["macros"] }
anyhow = "1"
dptree = "0.5"
url = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde_json = "1"
urlencoding = "2"
schemars = "1.2.1"
async-openai = { version = "0.34.0", features = ["chat-completion"] }
