[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workout-generator-py"
version = "0.1.0"
description = "Workout generation microservice with tool-calling flow"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "grpcio>=1.80.0,<2.0.0",
  "grpcio-health-checking>=1.80.0,<2.0.0",
  "protobuf>=6.31.1,<7.0.0",
  "openai>=1.45.0,<2.0.0",
  "structlog>=24.3.0,<25.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "anyio>=4.4.0,<5.0.0",
  "grpcio-tools>=1.80.0,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
